--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -51,7 +51,7 @@
                     <h:form>
                         <h:commandButton id="music" class="menuButtons" value="MUSICS" action="#{musicListManagedBean.allMusicList()}" ></h:commandButton>
                         <h:commandButton id="playlist" class="menuButtons" value="MY PLAYLISTS" action="listPlaylists"/>
-                        <h:commandButton id="popular" class="menuButtons" value="Popular" action="#{musicListManagedBean.mostPopular()}"/>
+                        <h:commandButton id="popular" class="menuButtons" value="Popular" action="#{musicListManagedBean.mostPopularList()}"/>
                     </h:form></ui:insert>
             </div>
             <div>
