--- a/web/addMusicToPlaylist.xhtml
+++ b/web/addMusicToPlaylist.xhtml
@@ -9,7 +9,7 @@
             <ui:define name="add to playList">
                 Add Music to Playlist
             </ui:define>
-            <ui:define name="right">
+            <ui:define name="right2">
                 <f:view>
                     <h:form>
                         <h:panelGroup>
