--- a/web/listMusics.xhtml
+++ b/web/listMusics.xhtml
@@ -52,6 +52,7 @@
                     </h:form>
                 </f:view>
             </ui:define>
+            <ui:define name="right1"> AQUI TOP 10 </ui:define>
         </ui:composition>
     </h:body>
 </html>
