--- a/web/popular.xhtml
+++ b/web/popular.xhtml
@@ -6,8 +6,8 @@
 
     <ui:composition template="./template.xhtml">
         <ui:define name="content">
-            <div id="styletable">
-                <ui:include src="#{musicListManagedBean.url}"></ui:include>
+            <div >
+                <ui:include src="#{musicListManagedBean.serviceURL}"></ui:include>
             </div>
         </ui:define>
     </ui:composition>
