Proj4 pontos respondidos

--- a/web/listPlaylists.xhtml
+++ b/web/listPlaylists.xhtml
@@ -116,7 +116,7 @@
                             <h:inputText id="itName" value="#{playListManagedBean.newPlay.name}"/>
                             <h:commandButton id="submit" value="ADD PLAYLIST" action="#{playListManagedBean.createPlay()}" />
                              <h:messages/>
-                            <h:outputLabel  style="color:#ff0000" value="#{playListManagedBean.erro}" />
+                            <h:outputLabel  style="color:red" value="#{playListManagedBean.erro}" />
                         </h:panelGroup>
                     </h:form>
                 </f:view>
