--- a/web/editUser.xhtml
+++ b/web/editUser.xhtml
@@ -15,7 +15,7 @@
                 <div align="center">
 
                     <h:form>
-                        <table border="0" align="center" >
+                        <table border="0" align="left" class="tabelaDetail" >
                             <tr>
                                 <td colspan="2"  ><h2> EDIT GETPLAY</h2></td></tr>
                             <tr>
