--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -22,7 +22,7 @@
                         </tr>
                         <tr>
                             <td><h:outputLabel id="password" value="PASSWORD"/></td>
-                            <td><h:inputSecret id="inputSecpass" value="#{userManagedBean.user.password }"/></td>
+                            <td><h:inputSecret id="inputSecpass" redisplay="false" value="#{userManagedBean.user.password }"/></td>
                         </tr>
                         <tr>
                             <td></td>
