--- a/web/listMusics.xhtml
+++ b/web/listMusics.xhtml
@@ -23,7 +23,7 @@
                                 <f:facet name="header">ALBUM</f:facet>
                                     #{item.album}
                             </h:column>
-                            <h:column>
+                            <h:column class="alignColCenter">
                                 <f:facet name="header">YEAR</f:facet>
                                     #{item.yearAlbum}
                             </h:column>
@@ -31,7 +31,7 @@
                                 <f:facet name="header">USERNAME</f:facet>
                                     #{item.userPlayid.name}
                             </h:column>
-                            <h:column>
+                            <h:column class="alignColCenter">
                                 <f:facet name="header" >
                                     <h:outputText value="&nbsp;"/>
                                 </f:facet>
