--- a/web/listPlaylists.xhtml
+++ b/web/listPlaylists.xhtml
@@ -43,7 +43,7 @@
                                             <f:facet name="header">USER OWNER</f:facet>
                                                 #{item.userPlayid.name}
                                         </h:column>
-                                        <h:column>
+                                        <h:column class="alignColCenter">
                                             <f:facet name="header">
                                                 <h:panelGrid columns="2">
                                                     <h:panelGroup>SIZE</h:panelGroup>
