--- a/web/popular.xhtml
+++ b/web/popular.xhtml
@@ -6,7 +6,7 @@
 
     <ui:composition template="./template.xhtml">
         <ui:define name="content">
-            <div id="top10">
+            <div id="popular">
                 <ui:include src="#{musicListManagedBean.serviceURL}"></ui:include>
             </div>
         </ui:define>
